--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-pytest
-allure-pytest
-selene>=2.0.0rc2
+allure-pytest==2.13.2
 Appium-Python-Client==3.1.1
+pydantic==2.5.3
+pytest==7.4.3
+selene==2.0.0rc4
